<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    tools:context=".QuizResultActivity">

    <TextView
        style="@style/resultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:padding="24dp"
        app:lottie_loop="false"
        app:lottie_speed="0.8"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/golden_trophy" />

    <TextView
        android:id="@+id/congratsText"
        style="@style/resultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/congrats" />

    <TextView
        android:id="@+id/userNameTextView"
        style="@style/resultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/scoreTextView"
        style="@style/scoreTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/score" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/finish_quiz"

        />

</LinearLayout>